* Changed the way top position of event is calculated * Now event elements are aligned by the layout not the cell * Moved some logic into seperate fn * Some bugfixes

--- a/src/Calendars/dailyCalendar.css
+++ b/src/Calendars/dailyCalendar.css
@@ -1,4 +1,5 @@
 #daily-calendar-layout {
+    position: relative;
     display: grid;
     overflow-y: auto;
     height: 560px;
@@ -60,7 +61,6 @@
 }
 
 .time {
-    position: relative;
     display: flex;
     color: #70757a;
     font-size: 10px;
@@ -92,7 +92,6 @@
     border-radius: 5px;
     border: 1px solid white;
     text-indent: 10px;
-    margin-top: 48px;
     cursor: pointer;
 }
 
